--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,8 +38,10 @@
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.2.3",
     "cordova-plugin-whitelist": "^1.3.3",
+    "golos-js": "^0.5.30",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "query": "^0.2.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
