--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "golos-js": "^0.5.30",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "jquery": "^3.3.1",
     "query": "^0.2.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
